# local_storage

./: .env.example  .gitignore  Makefile  PLAN.md  QWEN.md  README.md  pyproject.toml
app/: config.py  database.py  logging_config.py  main.py
app/models/: file.py  shared_file.py  user.py
app/routers/: files.py  shared.py  users.py
app/schemas/: file.py  user.py
app/services/: file_service.py  shared_file_service.py  user_service.py
docs/: models.md  routes.md
tests/: conftest.py  test_file_integrity.py  test_files.py  test_shared.py  test_user_service.py  test_users.py
